feat: public get movies endpoint with search and pagination
