# docs/swagger.json
@@ -232,7 +232,9 @@
                 "responses": {
                     "200": {
                         "description": "OK",
-                        "schema": {}
+                        "schema": {
+                            "$ref": "#/definitions/main.moviesResponse"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
@@ -366,6 +368,17 @@
                 }
             }
         },
+        "main.moviesResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/store.Movie"
+                    }
+                }
+            }
+        },
         "main.registerUserPayload": {
             "type": "object",
             "required": [
@@ -423,6 +436,23 @@
             "type": "object",
             "properties": {
                 "data": {
+                    "type": "string"
+                }
+            }
+        },
+        "store.Movie": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "release_year": {
+                    "type": "integer"
+                },
+                "title": {
                     "type": "string"
                 }
             }
